<resources>
    <string name="app_name">TwitterClone</string>

    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_username">username</string>
    <string name="hint_new_tweet">what\'s up</string>
    <string name="hint_search">search</string>

    <string name="button_login">login</string>
    <string name="button_signup">signup</string>
    <string name="button_apply">apply</string>
    <string name="button_signout">signout</string>

    <string name="text_create_account">create account</string>
    <string name="text_signout">sign out</string>
    <string name="text_signup">signup</string>
    <string name="text_login">already have an account? Go to Login</string>
    <string name="error_occurs">an error occurs</string>
    <string name="email_registered">email already registered</string>
    <string name="email_required">email is required</string>
    <string name="password_required">password is required</string>
    <string name="username_required">username is required</string>
    <string name="invalid_email_or_password">email or password is invalid</string>
    <string name="email_not_found">email not found</string>
    <string name="error_profile_data">error fetching profile data</string>
    <string name="update_error">update failed. Please try again.</string>
    <string name="update_success">update successful</string>
    <string name="tweet_no_content">tweet must not be empty</string>
    <string name="tweet_sent">tweet sent</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_image_acc">user image</string>
    <string name="text_choose_from_device">choose from device</string>
    <string name="text_take_a_photo">take a photo</string>

    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="add_image">add image</string>
    <string name="send_tweet">send tweet</string>
</resources>