<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/grid_3x"
        android:background="@drawable/ic_baseline_arrow_back"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/iv_sing_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_sing_up" />

    <ImageView
        android:id="@+id/iv_sing_up"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/grid_1x"
        android:background="@drawable/pngegg"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_sing_up"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_3x"
        android:text="@string/text_create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/grid_3x"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_sing_up">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username_sing_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_3x"
                android:maxWidth="@dimen/standard_width"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username_sing_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email_sing_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_3x"
                android:maxWidth="300dp"
                app:layout_constraintEnd_toEndOf="@id/til_username_sing_up"
                app:layout_constraintStart_toStartOf="@id/til_username_sing_up"
                app:layout_constraintTop_toBottomOf="@+id/til_username_sing_up">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_sing_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_sing_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_3x"
                android:maxWidth="300dp"
                app:layout_constraintEnd_toEndOf="@id/til_email_sing_up"
                app:layout_constraintStart_toStartOf="@id/til_email_sing_up"
                app:layout_constraintTop_toBottomOf="@+id/til_email_sing_up">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_sing_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_sing_up"
                style="@style/StandardButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="@dimen/grid_3x"
                android:layout_marginTop="@dimen/grid_4x"
                android:layout_marginBottom="@dimen/grid_3x"
                android:maxWidth="@dimen/standard_width"
                android:text="@string/button_signup"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/til_password_sing_up"
                app:layout_constraintStart_toStartOf="@id/til_password_sing_up"
                app:layout_constraintTop_toBottomOf="@+id/til_password_sing_up"
                app:layout_constraintVertical_bias="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progress_sing_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_grey"
        android:clickable="false"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>