<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/rl_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/grid_3x"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_width"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/grid_2x" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_profile"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_3x"
                android:maxWidth="@dimen/standard_width"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username_sing_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_apply"
                style="@style/StandardButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_username_profile"
                android:layout_marginHorizontal="@dimen/grid_3x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:maxWidth="@dimen/standard_width"
                android:text="@string/button_apply"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/text_signout"
                style="@style/LinkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_apply"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_3x"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/text_signout" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/profileProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_grey"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>